Refactor Docker setup and enhance API key handling; update .gitignore to include data directory, modify docker-compose for environment variable support, and improve host management with new refresh endpoint and error handling.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,15 @@ services:
     build: .
     container_name: solar-control
     ports:
-      - "8000:8000"
+      - "${PORT:-8000}:${PORT:-8000}"
     environment:
       - API_KEY=${API_KEY:-change-me-please}
-      - HOST=0.0.0.0
-      - PORT=8000
+      - HOST=${HOST:-0.0.0.0}
+      - PORT=${PORT:-8000}
     volumes:
-      - ./hosts.json:/app/hosts.json
       - ./data:/app/data
+    extra_hosts:
+      - "host.docker.internal:host-gateway"  # Allow access to host machine
     restart: unless-stopped
     networks:
       - solar-network
